--- a/app/views/Auth/Login.html
+++ b/app/views/Auth/Login.html
@@ -1,11 +1,10 @@
 <pre>
-Login: {{.login}}
+Login: {{.login}}, {{.connection}}
 
 Params:
     {{.params}}
 
-Session:
-    sessions: 
+Sessions: 
 *********************************************************************************
 {{.sessionsStr}}
 *********************************************************************************
